fix: 💄 mobile nav links not left aligned

--- a/src/components/Header/Navigation/Navigation.module.css
+++ b/src/components/Header/Navigation/Navigation.module.css
@@ -36,6 +36,7 @@
 .Navigation .navLinks.first {
   flex-direction: column;
   flex-grow: 1;
+  align-items: flex-start;
 }
 
 .Navigation .navLinks.last {
